--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
     	<artifactId>spring-data-jpa</artifactId>
     	<version>1.7.0.RELEASE</version>
     </dependency>
+    <dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-test</artifactId>
+    	<version>4.1.1.RELEASE</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>equationsapp</finalName>
