--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,13 @@
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-core</artifactId>
     	<version>${org.springframework.version}</version>
-    </dependency>
+		<exclusions>
+			<exclusion>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+			</exclusion>
+		</exclusions>
+	</dependency>
     <dependency>
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-webmvc</artifactId>
@@ -51,16 +57,6 @@
     	<version>5.0.1.Final</version>
     </dependency>
     <dependency>
-    	<groupId>org.slf4j</groupId>
-    	<artifactId>slf4j-api</artifactId>
-    	<version>1.7.5</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.slf4j</groupId>
-    	<artifactId>slf4j-log4j12</artifactId>
-    	<version>1.7.5</version>
-    </dependency>
-    <dependency>
     	<groupId>mysql</groupId>
     	<artifactId>mysql-connector-java</artifactId>
     	<version>5.1.30</version>
@@ -89,6 +85,16 @@
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-test</artifactId>
     	<version>4.1.1.RELEASE</version>
+    </dependency>
+    <dependency>
+    	<groupId>ch.qos.logback</groupId>
+    	<artifactId>logback-classic</artifactId>
+    	<version>1.1.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>jcl-over-slf4j</artifactId>
+    	<version>1.7.5</version>
     </dependency>
   </dependencies>
   <build>
