First draft of answer datatable

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,11 @@
     	<artifactId>jcl-over-slf4j</artifactId>
     	<version>1.7.5</version>
     </dependency>
+    <dependency>
+    	<groupId>com.google.code.gson</groupId>
+    	<artifactId>gson</artifactId>
+    	<version>2.2.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>equationsapp</finalName>
