--- a/pom.xml
+++ b/pom.xml
@@ -32,8 +32,8 @@
     </dependency>
     <dependency>
     	<groupId>javax.servlet</groupId>
-    	<artifactId>servlet-api</artifactId>
-    	<version>2.5</version>
+    	<artifactId>javax.servlet-api</artifactId>
+    	<version>3.1.0</version>
     	<scope>provided</scope>
     </dependency>
     <dependency>
@@ -100,6 +100,11 @@
     	<groupId>com.google.code.gson</groupId>
     	<artifactId>gson</artifactId>
     	<version>2.2.2</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-core</artifactId>
+    	<version>1.9.5</version>
     </dependency>
   </dependencies>
   <build>
