--- a/src/test/resources/jdbc-test.properties
+++ b/src/test/resources/jdbc-test.properties
@@ -1,7 +1,8 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/pfcdb
-jdbc.username=root
-jdbc.password=admin
+##jdbc.url=jdbc:mysql://localhost:3306/pfcdb
+jdbc.url=test
+jdbc.username=test
+jdbc.password=test
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 jpa.database = MYSQL
